# flash_robot

./: README.md  requirements.txt
flash_2dnav/: CMakeLists.txt  package.xml
flash_2dnav/config/localization/: amcl.yaml
flash_2dnav/config/planner/: base_local_planner_params.yaml  common_costmap_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
flash_2dnav/config/rviz/: mapping.rviz  navigation.rviz
flash_2dnav/launch/: flash_configuration.launch  mapping.launch  move_base.launch
flash_2dnav/scripts/: navigate.py
flash_behaviors/: CMakeLists.txt  package.xml
flash_behaviors/action/: Act.action  Behave.action  Speak.action
flash_behaviors/config/: functions  functions.u
flash_behaviors/launch/: experiment.launch
flash_behaviors/msg/: Speech.msg
flash_behaviors/scripts/: action_server.py  behavior_server.py  speech_server.py
flash_bringup/: CMakeLists.txt  package.xml
flash_bringup/config/: flash.rviz  joystick_config.yaml
flash_bringup/launch/: full_demo.launch  teleop_demo.launch  teleop_head.launch
flash_controller/: CMakeLists.txt  package.xml  setup.py
flash_controller/nodes/: battery_node.py  camera_node.py  flash_node.py  head_node.py  joints_node.py  joy_teleop.py  laser_node.py  ps_node.py
flash_controller/src/flash/: flash.py  urbi_wrapper.py
flash_controller/src/flash_controller/: battery.py  config.py  flash.py  flash_state.py  flash_urbi.py  head.py  joint.py  laser.py  sensor.py  urbi_wrapper.py
flash_controller/src/urbi/: expressions.u  gamepad_control.u
flash_description/: CMakeLists.txt  package.xml
flash_description/urdf/: flash_model.urdf.xacro
flash_description/urdf/sensors/: hokuyo_urg_04lx_ug01_laser.urdf.xacro
flash_dialog/: CMakeLists.txt  package.xml  setup.py
flash_dialog/launch/: flash_dialog.launch
flash_dialog/nodes/: dialog_node.py
flash_experiments/: CMakeLists.txt  package.xml
flash_experiments/launch/: experiment_human.launch
flash_experiments/scripts/: scheduling_task.py  signal_ack.py
flash_maps/: CMakeLists.txt  package.xml
flash_maps/config/: lab_map.yaml  lab_map_tight.yaml
flash_odom/: CMakeLists.txt  package.xml
flash_odom/launch/: flash_odom.launch
flash_robot/: CMakeLists.txt  package.xml
