<?xml version="1.0"?>
<package format="2">
  <name>flash_controller</name>
  <version>0.0.0</version>
  <description>The flash_controller package</description>

  <maintainer email="brutusthetschiepel@gmail.com">BrutusTT</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
