<?xml version="1.0"?>
<package>
  <name>flash_robot</name>
  <version>0.0.1</version>
  <description>Description and controller configuration of FLASH</description>
  <maintainer email="i.keller@hw.ac.uk">Ingo Keller</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>flash_description</run_depend>
  <run_depend>flash_bringup</run_depend>

  <export>
     <metapackage/>
  </export>
</package>
